--- a/src/css/pages/teams.scss
+++ b/src/css/pages/teams.scss
@@ -6,6 +6,7 @@
 
 	.share-section{
 		max-width:500px;
+		display: none;
 	}
 }
 
